compiler/tests/fail/param_expansion/x86-64/array_too_large_arg.jazz
export
fn main(reg u64[0x10000000000000000] a) -> reg u64 {
    reg u64 r;
    r = a[0];

    return r;
}
